syntax = "proto3";

// ProviderRequest: Message sent by a provider to identify itself and authenticate with the Hub.
// Fields:
//   provider: The unique name of the provider.
//   auth_token: The authentication token for the provider.
message ProviderRequest {
    string provider = 1;
    string auth_token = 2;
}

// TaskResult: Message sent by a provider to submit the result of a processed task.
// Fields:
//   id: Unique identifier for the task.
//   provider: Name of the provider submitting the result.
//   auth_token: Authentication token for the provider.
//   status: Status of the task execution (e.g., success, error).
//   action: Name of the action that was executed.
//   payload: The original payload of the task (as a string).
//   result: The result of the action (as a string).
//   account: Optional account information as a key-value map.
message TaskResult {
    string id = 1;
    string provider = 2;
    string auth_token = 3;
    string status = 4;
    string action = 5;
    string payload = 6;
    string result = 7;
    map<string, string> account = 8;
}

// Task: Message representing a task assigned to a provider by the Hub.
// Fields:
//   id: Unique identifier for the task.
//   action: Name of the action to execute.
//   payload: The payload for the action (as bytes).
//   account: Optional account information as a key-value map.
message Task {
    string id = 1;
    string action = 2;
    bytes payload = 3;
    map<string, string> account = 4;
}

// Hub: gRPC service definition for communication between providers and the Hub.
// Methods:
//   GetTask: Provider requests a new task from the Hub.
//   SubmitTaskResult: Provider submits the result of a processed task.
service Hub {
    rpc GetTask(ProviderRequest) returns (Task) {}
    rpc SubmitTaskResult(TaskResult) returns (Task) {}
}